--- a/config/database.yml
+++ b/config/database.yml
@@ -4,10 +4,14 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: mysql2
+  encoding: utf8
+  host: localhost
+  port: 3306
   pool: 5
-  timeout: 5000
+  database: <%= ENV['MYSQL_DEV_DB_NAME'] %>
+  username: <%= ENV['MYSQL_DEV_USER'] %>
+  password: <%= ENV['MYSQL_DEV_PASSWORD'] %>
 
 staging:
   adapter: mysql2
@@ -15,8 +19,8 @@ staging:
   host: localhost
   port: 3306
   pool: 5
-  database: tapas_rails_staging
-  username: tapas_rails
+  database: <%= ENV['MYSQL_STAGING_DB_NAME'] %>
+  username: <%= ENV['MYSQL_STAGING_USER'] %>
   password: <%= ENV['MYSQL_STAGING_PASSWORD'] %>
 
 production:
